# cute-borders

./: Cargo.toml  LICENSE  README.md  build.rs
src/: cleanup.rs  config.rs  config.yaml  example.rs  file_util.rs  frame_drawer.rs  logger.rs  main.rs  rainbow.rs  scaling_util.rs  startup_util.rs  tray_util.rs  util.rs  window_border.rs  window_corner_util.rs
src/data/: config.yaml
