[package]
name = "cute-borders"
version = "2.0.0-alpha.1"
edition = "2021"

[dependencies]
ctrlc = "3.4.0"
lazy_static = "1.4.0"
serde = "1.0.183"
serde_yaml = "0.9.25"
tray-icon = "0.8.1"
winapi = { version = "0.3.9", features = ["winuser", "dwmapi", "wincon", "shellapi", "errhandlingapi", "d2d1", "combaseapi", "libloaderapi", "shellscalingapi"] }
winreg = "0.50.0"
wio = "0.2.2"

[build-dependencies]
winres = "0.1"