[package]
name = "cute-borders"
version = "1.0.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
open = "5.1.4"
serde = "1.0.183"
serde_yaml = "0.9.25"
tray-icon = "0.8.1"
winapi = { version = "0.3.9", features = ["winuser", "dwmapi", "wincon", "shellapi", "errhandlingapi"] }
winreg = "0.50.0"

[build-dependencies]
winres = "0.1"
