[package]
name = "cute-borders"
version = "1.3.0"
edition = "2021"

[dependencies]
check_elevation = "0.2.4"
lazy_static = "1.4.0"
open = "5.1.4"
planif = "1.0.0"
serde = "1.0.203"
serde_yaml = "0.9.34+deprecated"
tray-icon = "0.14.3"
winapi = { version = "0.3.9", features = ["winuser", "dwmapi", "wincon", "shellapi", "errhandlingapi", "winerror"] }
winreg = "0.52.0"

[build-dependencies]
winres = "0.1.12"
